# qr_barcode_detector

./: CMakeLists.txt  package.xml  作文.md  试卷.md  试卷题型.md
launch/: detector_rviz.launch
rviz/: qr.rviz
src/: qrcode_detector.cpp
